--- a/_data/aviation.yml
+++ b/_data/aviation.yml
@@ -20,7 +20,7 @@
 
     - title: Year-To-Date Cargo Volume
       summary: Total year-to-date cargo volume  (blue, left) and the year-over-year percentage change in cargo volume (red, right)
-      description: Increasing the airport's cargo volume is a key economic development priority of Mayor Reed and Miguel Southwell, HJAIA's General Manager. Current volume is flat vs 2013, though velocity has picked up significantly as the year has progressed.
+      description: Increasing the airport's cargo volume is a key economic development priority of Mayor Reed and Miguel Southwell, HJAIA's General Manager. Current volume is slightly below 2013, though velocity has picked up as the year has progressed.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DOA
@@ -40,7 +40,7 @@
   charts:
     - title: Security Wait Time Performance
       summary: Percentage of time that the wait to get through security is under the Airport's target time
-      description: Performance is almost always at or near the airport's target of 90%
+      description: Performance is usually at or near the airport's target of 90%, though it did dip as low as 75% in May 2013.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DOA
@@ -53,7 +53,7 @@
 
     - title: Average Customs Processing Times
       summary: The average time it takes for an inbound passenger to get processed through customs
-      description: Average processing time has fluctuated from 9 minutes to 13 minutes in 2014.
+      description: Average processing time has fluctuated from 8.5 minutes to 13 minutes in 2014.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DOA
