--- a/_data/municipal-court.yml
+++ b/_data/municipal-court.yml
@@ -3,7 +3,7 @@
   charts:
     - title: Total <B>Criminal</B> Cases Filed and Case Disposal Efficiency
       summary: Total Number of Criminal cases filed in the Court (blue, left axis) and the percentage of cases disposed of within 10 days (red, right axis)
-      description: In 2014, the number of criminal cases filed with the court has stayed mostly between 1500-2000 per month.  The percent of those cases being disposed of within 10 days has ranged roughly between 45-50%, meaning that almost half of all criminal cases filed are being disposed of within 10 days.
+      description: In 2014, the number of criminal cases filed with the court has mostly stayed between 1500-2000 per month.  The percent of those cases being disposed of within 10 days has ranged roughly between 45-50%, meaning that almost half of all criminal cases filed are being disposed of within 10 days.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: COURT
@@ -23,7 +23,7 @@
   charts:
     - title: Total <B> Traffic</B> Cases Filed and Case Disposal Efficiency
       summary: Total Number of Traffic cases filed in the Court (blue, left axis) and the percentage of cases disposed of within 10 days (red, right axis)
-      description: In 2014, the number of traffic cases filed with the court has varied from  high of ~12,000 to a low of ~8,800 per month.  The percent of those cases being disposed of within 10 days has stayed at 8-9%.
+      description: In 2014, the number of traffic cases filed with the court has varied significnatly, from  high of ~16,000 to a low of ~8,800 per month.  Despite these fluctuations, the percent of those cases being disposed of within 10 days has mostly stayed between 8-9%.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: COURT
