--- a/_data/parks-and-rec.yml
+++ b/_data/parks-and-rec.yml
@@ -37,7 +37,7 @@
 
     - title: Forestry Service Requests
       summary: Forestry is responsible for clearing tree obstructions from blocking sidewalks, streets and the public right of way. Forestry is responsible for removing down trees or tree debris from private property when it is determined that tree or branches fell from city property onto private property. The chart below shows total customer-initiated forestry service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right).
-      description: The largest drivers of performance are tree takedowns and pruning. The increased workload of downed trees from several back to back storms has started the team well below target of 90% in 2014, but performance has trende dupwards as the team has worked through the backlog.
+      description: The largest drivers of performance are tree takedowns and pruning. The increased workload of downed trees from several back to back storms started the team well below target of 90% in 2014, but performance has trended upwards as the team has worked through the backlog.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPR
@@ -54,7 +54,7 @@
 
     - title: Skilled Services Service Requests
       summary: When facilities and park assets are reported as in need of repair or maintenance, the skilled services team investigates the source of the problem and makes necessary changes. The chart below shows total customer-initiated skilled services service requests (blue, left) and the percentage of those service requests that were resolved within the Department's target timeframes (red, right).
-      description: The skilled services team maintains over 33 recreation centers and many more facilities such as playgrounds, gazebos, and basketball courts. Performance has been below target but is trending upwards and the Department continues to adress staffing and other operational issues.
+      description: The skilled services team maintains over 33 recreation centers and many more facilities such as playgrounds, gazebos, and basketball courts. Performance has been below target but has recently trended sharply upwards as total volume decreased and the Department addressed staffing and other operational issues.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
@@ -90,7 +90,7 @@
   charts:
     - title: Recreation Center Attendance
       summary: The charts below shows total attendance at Recreation facilities, as captured through the Department's iParks application.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.  Active memberships, also seasonal, has ranged from 3,200-5,300.
+      description: Since the Department started tracking attendance data via its iParks application in July 2014, recreation center visits have ranged from 36,000-55,000.  This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DPR
@@ -102,7 +102,7 @@
       series1-label: Total people
     - title: Recreation Center Memberships
       summary: The chart below shows the total active memberships at Recreation facilities.
-      description: Since the Department started tracking attendance data via its iParks application in July 2014, active memberships, has ranged from 3,200-5,300. This numbers fluctuates significantly based on seasonality, with higher numbers coming in summer months.
+      description: Since the Department started tracking attendance data via its iParks application in July 2014, active memberships has ranged from 3,200-5,300. This number fluctuates significantly based on seasonality, with higher numbers coming in summer months.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       datasource: rec_center_memberships
@@ -113,7 +113,7 @@
 
     - title: Youth Attendance and Programming
       summary: The department offers an array of diverse programs for youth that will improve academic and athletic performance while building character and sharpening social skills. The chart below shows the total youth being served by After School and Camp Best Friends (blue) and other Recreation Center (red) Programming such as swim lessons, sports and tots programs.
-      description: With new investments in facilities and programming, lead by the Mayor's Centers of Hope initiative, youth attendance peaked at 3,000 per month in the summer of 2014.
+      description: With new investments in facilities and programming, lead by the Mayor's Centers of Hope initiative, youth attendance peaked at over 3,000 per month in the summer of 2014.
       note: Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DPR
