--- a/_data/watershed-management.yml
+++ b/_data/watershed-management.yml
@@ -3,7 +3,7 @@
   charts:
     - title: All Customer Service Requests (Total Department)
       summary: This figure shows the total volume of all customer service requests that the Department of Watershed Management (DWM) receives on a monthly basis. [This covers every element of the Department’s operations – from billing queries to leaking hydrant complaints and reports of missing street plates.] It also shows DWM’s performance in fulfilling those requests on time each month.
-      description: The graph shows two key trends over the past year - the volume of customer service requests has increased since January 2014, while DWM’s performance has decreased over the same period. The cause of this performance is manifold, including staffing challenges and challenges arising from a recent upgrade to the Department’s IT system.
+      description: Since August 2014, the Department has completed between 65-70% of all service requests within target timeframe each month.  Service request volume has held fairly steady between ~6,000-6,500 each month, though these numbers are highly seasonal and are expected to change.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: full
       department: DWM
@@ -20,7 +20,7 @@
 
     - title: Turning On New Account Service Requests
       summary: This figure measures the number of new customer account requests that DWM receives each month. It also measures the Department’s responsiveness in activating those accounts within 24 hours of the request being made.
-      description: The results show that DWM has consistently activated nearly 100 percent of new accounts on time in every month. The volume of customer requests for new accounts has fluctuated between 600 and 1000 per month. The total number of active customer accounts is around 150,000.
+      description: DWM has consistently activated nearly 100 percent of new accounts on time in every month. The volume of customer requests for new accounts has fluctuated between 800-1000 per month. The total number of active customer accounts is around 150,000.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DWM
@@ -38,7 +38,7 @@
 
     - title: Meter Investigation Service Requests
       summary: This figure measures the number of meter investigations carried out by DWM each month, and the Department’s performance in carrying out those investigations in a timely manner. Customers can request a meter investigation where they believe there is something wrong with their meter that is causing it to give false readings about the amount of water they are consuming. DWM’s target is to complete a meter investigation within 7 business days of the customer making the request.
-      description: This metric has only been tracked since February 2014. The results to date show a slight downward trend in the percent of all customer service requests within 7 business days. Meter investigations deal with a very small fraction of the more-than 150,000 meters that are installed across the city.
+      description: Since August 2014, performance has trended up. Meter investigations deal with a very small fraction of the more-than 150,000 meters that are installed across the city.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DWM
@@ -55,7 +55,7 @@
 
     - title: Street Flooding Inspection Service Requests
       summary: This figure measures DWM’s responsiveness to customer service calls about water pooling in city streets. Because this pooling can be a symptom of several different problems, the first course of action is always for Watershed staff to inspect the site and determine the root cause of the problem. DWM has a goal of responding to all such customer calls and initiating an inspection within 4 hours.
-      description: The Department has steadily improved its performance from January to September 2014. This can be attributed to both operational improvements within the Department as well as a decreasing volume of Service Requests.
+      description: The Department's performance has fluctuated between 60-80% each month.  The absolute value of these fluctuations are relatively small, as service request volumes average under 100 per month.  This metric is seasonal and volume tends to increase in rainier months.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DWM
@@ -73,7 +73,7 @@
 
     - title: Drinking Water Quality Complaint Service Requests
       summary: This figure reports the number of customer complaints received by DWM about the quality of its drinking water. The Department’s target is to resolve each complaint within 8 hours of it being reported.
-      description: As the graph shows, DWM’s performance has improved since January. While performance is bumpy, there is an overall upward trend. The overall number of complaints received – a max of 200 complaints in August – represents less than 0.1% of all customers.
+      description: The Department’s performance has improved each month. The overall number of complaints received – a max of 200 complaints in August – represents less than 0.1% of all customers.
       note: In any given month, the "Total Service Requests" metric is defined as the sum of the number of Service Requests closed during the month and the number of Service Requests open as of the end of the month.  Volume is calculated this way to ensure that open Service Requests continue to count towards performance until they are closed. <br><br>Add or remove data points by clicking on the name in the index above. Hover your cursor over the results in the above chart for more information. A pop-up box will display month, year, measure, and result for each data point.
       size: half
       department: DWM
